# rawtree-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: tests.yml
src/: cli.rs  client.rs  config.rs  constants.rs  main.rs  org.rs  output.rs
src/commands/: auth.rs  cluster.rs  database.rs  docs.rs  endpoint.rs  export.rs  insert.rs  keys.rs  logs.rs  mod.rs  open.rs  organization.rs  ping.rs  project.rs  query.rs  sample.rs  schema.rs  status.rs  table.rs  table_output.rs  whoami.rs
tasks/: lessons.md  todo.md
tests/integration/: conftest.py  docker-compose.integration.yml  run.sh  test_cli_commands.py
tests/integration/rawtree-config/config.d/: keeper.xml  replicated.xml
