[package]
name = "rtree"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/rawtreedb/rtree"

[[bin]]
name = "rtree"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rpassword = "7"
indicatif = "0.18.4"
urlencoding = "2"
flate2 = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
