[package]
name = "rawtree-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rawtreedb/rawtree-cli"

[[bin]]
name = "rtree"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rpassword = "7"
indicatif = "0.18.4"
urlencoding = "2"
flate2 = "1"
comfy-table = "7.2.2"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
